syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

import "google/protobuf/any.proto";

message CreateSchemaInputRequest {
  string id = 1;
  repeated string required = 2;
  map<string, google.protobuf.Any> properties = 3;
}

message CreateSchemaInputResponse {
  string id = 1;
  repeated string required = 2;
  map<string, google.protobuf.Any> properties = 3;
  string schema_id = 4;
}

service SchemaInputService {
  rpc CreateSchemaInput(CreateSchemaInputRequest) returns (CreateSchemaInputResponse);
}
